major refactor on core
Player#act are now called through a coroutine executor.
Creature implements ITappable
add State#step
fix Game's wrong construction call in GameBuilder
refactor actions, rules and players