@@ -7,14 +7,13 @@ import magic.core.cards.magics.attachments.DamageLifeBoost;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 
 /**
@@ -29,9 +28,10 @@ public class CreatureTest {
 
     @BeforeEach
     public void setUp() {
-        this.creature = new Creature("mocked-creature", 3, 2, List.of(BasicLands.FOREST),
-                Collections.emptyList(),
-                Collections.emptyList());
+        this.creature = new Creature("mocked-creature", 3, 2, false,
+            List.of(BasicLands.FOREST),
+            Collections.emptyList(),
+            Collections.emptyList());
     }
 
     @Test
@@ -41,9 +41,9 @@ public class CreatureTest {
 
     @Test
     public void testBuffsAreImmutable() {
-        Creature creature = new Creature("Joe", 10, 4,
-                List.of(BasicLands.PLAINS), List.of(Abilities.HASTE),
-                Collections.emptyList());
+        Creature creature = new Creature("Joe", 10, 4, false,
+            List.of(BasicLands.PLAINS), List.of(Abilities.HASTE),
+            Collections.emptyList());
 
         Collection<Abilities> buffs = creature.abilities();
 
@@ -58,10 +58,11 @@ public class CreatureTest {
 
     @Test
     public void testLackeyWithAttachments() {
-        DamageLifeBoost a = new DamageLifeBoost("mocked-damage", 2, 0, List.of(BasicLands.PLAINS));
+        DamageLifeBoost a = new DamageLifeBoost("mocked-damage", 2, 0,
+            List.of(BasicLands.PLAINS));
 
-        Creature l = new Creature("Joe", 53, 31,
-                List.of(BasicLands.PLAINS), Collections.emptyList(), List.of(a));
+        Creature l = new Creature("Joe", 53, 31, false,
+            List.of(BasicLands.PLAINS), Collections.emptyList(), List.of(a));
 
         assertEquals(53 + 2, l.effectiveDamage());
         assertEquals(31 + 0, l.effectiveLife());
